build.log
    Updating crates.io index
     Locking 302 packages to latest Rust 1.86.0 compatible versions
      Adding convert_case v0.6.0 (available: v0.8.0)
      Adding criterion v0.5.1 (available: v0.7.0)
      Adding serde_qs v0.13.0 (available: v0.15.0)
      Adding syn v1.0.109 (available: v2.0.106)
      Adding tokio-tungstenite v0.26.2 (available: v0.27.0)
 Downloading crates ...
  Downloaded ptr_meta_derive v0.1.4
  Downloaded csv-core v0.1.12
  Downloaded ptr_meta v0.1.4
  Downloaded dirs-sys-next v0.1.2
  Downloaded bytecheck_derive v0.6.12
  Downloaded smol_str v0.3.2
  Downloaded seahash v4.1.0
  Downloaded dirs-next v2.0.0
  Downloaded rend v0.4.2
  Downloaded bytecheck v0.6.12
  Downloaded rkyv_derive v0.7.45
  Downloaded vecmap-rs v0.2.3
  Downloaded tokio-tungstenite v0.26.2
  Downloaded term v0.7.0
  Downloaded tungstenite v0.26.2
  Downloaded rkyv v0.7.45
  Downloaded borsh v1.5.7
  Downloaded encode_unicode v1.0.0
  Downloaded ahash v0.7.8
  Downloaded serde_qs v0.13.0
  Downloaded rust_decimal v1.37.2
  Downloaded simdutf8 v0.1.5
  Downloaded prettytable-rs v0.10.0
  Downloaded borsh-derive v1.5.7
  Downloaded csv v1.3.1
   Compiling proc-macro2 v1.0.101
   Compiling unicode-ident v1.0.18
   Compiling libc v0.2.175
   Compiling cfg-if v1.0.3
   Compiling serde v1.0.219
   Compiling pin-project-lite v0.2.16
   Compiling stable_deref_trait v1.2.0
   Compiling futures-core v0.3.31
   Compiling bytes v1.10.1
   Compiling itoa v1.0.15
   Compiling memchr v2.7.5
   Compiling smallvec v1.15.1
   Compiling futures-sink v0.3.31
   Compiling once_cell v1.21.3
   Compiling shlex v1.3.0
   Compiling zeroize v1.8.1
   Compiling litemap v0.8.0
   Compiling version_check v0.9.5
   Compiling writeable v0.6.1
   Compiling autocfg v1.5.0
   Compiling pin-utils v0.1.0
   Compiling fnv v1.0.7
   Compiling typenum v1.18.0
   Compiling slab v0.4.11
   Compiling subtle v2.6.1
   Compiling futures-io v0.3.31
   Compiling icu_properties_data v2.0.1
   Compiling icu_normalizer_data v2.0.0
   Compiling futures-task v0.3.31
   Compiling percent-encoding v2.3.2
   Compiling httparse v1.10.1
   Compiling untrusted v0.9.0
   Compiling getrandom v0.3.3
   Compiling rustls v0.23.31
   Compiling zerocopy v0.8.26
   Compiling ryu v1.0.20
   Compiling try-lock v0.2.5
   Compiling log v0.4.27
   Compiling thiserror v2.0.16
   Compiling utf8_iter v1.0.4
   Compiling tower-service v0.3.3
   Compiling serde_json v1.0.143
   Compiling atomic-waker v1.1.2
   Compiling cpufeatures v0.2.17
   Compiling thiserror v1.0.69
   Compiling rust_decimal v1.37.2
   Compiling tower-layer v0.3.3
   Compiling base64 v0.22.1
   Compiling ipnet v2.11.0
   Compiling unicode-xid v0.2.6
   Compiling utf-8 v0.7.6
   Compiling iri-string v0.7.8
   Compiling bitflags v2.9.3
   Compiling iana-time-zone v0.1.63
   Compiling data-encoding v2.9.0
   Compiling arrayvec v0.7.6
   Compiling equivalent v1.0.2
   Compiling syn v1.0.109
   Compiling either v1.15.0
   Compiling hashbrown v0.15.5
   Compiling parking_lot_core v0.9.11
   Compiling lazy_static v1.5.0
   Compiling regex-syntax v0.8.6
   Compiling scopeguard v1.2.0
   Compiling unicode-segmentation v1.12.0
   Compiling hex v0.4.3
   Compiling encode_unicode v1.0.0
   Compiling vecmap-rs v0.2.3
   Compiling nu-ansi-term v0.50.1
   Compiling unicode-width v0.1.14
   Compiling cc v1.2.34
   Compiling futures-channel v0.3.31
   Compiling rustls-pki-types v1.12.0
   Compiling generic-array v0.14.7
   Compiling tracing-core v0.1.34
   Compiling num-traits v0.2.19
   Compiling form_urlencoded v1.2.2
   Compiling want v0.3.1
   Compiling sync_wrapper v1.0.2
   Compiling lock_api v0.4.13
   Compiling thread_local v1.1.9
   Compiling itertools v0.14.0
   Compiling csv-core v0.1.12
   Compiling sharded-slab v0.1.7
   Compiling http v1.3.1
   Compiling convert_case v0.6.0
   Compiling webpki-roots v1.0.2
   Compiling webpki-roots v0.26.11
   Compiling tracing-log v0.2.0
   Compiling quote v1.0.40
   Compiling syn v2.0.106
   Compiling signal-hook-registry v1.4.6
   Compiling mio v1.0.4
   Compiling socket2 v0.6.0
   Compiling getrandom v0.2.16
   Compiling dirs-sys-next v0.1.2
   Compiling is-terminal v0.4.16
   Compiling http-body v1.0.1
   Compiling ring v0.17.14
   Compiling regex-automata v0.4.10
   Compiling http-body-util v0.1.3
   Compiling dirs-next v2.0.0
   Compiling rand_core v0.9.3
   Compiling parking_lot v0.12.4
   Compiling term v0.7.0
   Compiling block-buffer v0.10.4
   Compiling crypto-common v0.1.6
   Compiling digest v0.10.7
   Compiling sha1 v0.10.6
   Compiling hmac v0.12.1
   Compiling ppv-lite86 v0.2.21
   Compiling rand_chacha v0.9.0
   Compiling rand v0.9.2
   Compiling barter-macro v0.2.0 (/var/tmp/vibe-kanban/worktrees/vk-a8c3-barter-rs/barter-macro)
   Compiling matchers v0.2.0
   Compiling synstructure v0.13.2
   Compiling zerofrom-derive v0.1.6
   Compiling serde_derive v1.0.219
   Compiling yoke-derive v0.8.0
   Compiling zerovec-derive v0.11.1
   Compiling displaydoc v0.2.5
   Compiling tokio-macros v2.5.0
   Compiling futures-macro v0.3.31
   Compiling tracing-attributes v0.1.30
   Compiling thiserror-impl v2.0.16
   Compiling derive_more-impl v2.0.1
   Compiling thiserror-impl v1.0.69
   Compiling pin-project-internal v1.1.10
   Compiling async-trait v0.1.89
   Compiling tokio v1.47.1
   Compiling futures-util v0.3.31
   Compiling rustls-webpki v0.103.4
   Compiling pin-project v1.1.10
   Compiling zerofrom v0.1.6
   Compiling tracing v0.1.41
   Compiling yoke v0.8.0
   Compiling zerovec v0.11.4
   Compiling zerotrie v0.2.2
   Compiling derive_more v2.0.1
   Compiling tinystr v0.8.1
   Compiling potential_utf v0.1.3
   Compiling icu_collections v2.0.0
   Compiling icu_locale_core v2.0.0
   Compiling icu_provider v2.0.0
   Compiling icu_properties v2.0.1
   Compiling icu_normalizer v2.0.0
   Compiling futures-executor v0.3.31
   Compiling futures v0.3.31
   Compiling idna_adapter v1.2.1
   Compiling hyper v1.7.0
   Compiling tower v0.5.2
   Compiling tokio-util v0.7.16
   Compiling idna v1.1.0
   Compiling tokio-stream v0.1.17
   Compiling tower-http v0.6.6
   Compiling tokio-rustls v0.26.2
   Compiling hyper-util v0.1.16
   Compiling url v2.5.7
   Compiling serde_urlencoded v0.7.1
   Compiling smol_str v0.3.2
   Compiling chrono v0.4.41
   Compiling indexmap v2.11.0
   Compiling serde_qs v0.13.0
   Compiling csv v1.3.1
   Compiling tracing-serde v0.2.0
   Compiling prettytable-rs v0.10.0
   Compiling tungstenite v0.26.2
   Compiling tracing-subscriber v0.3.20
   Compiling hyper-rustls v0.27.7
   Compiling barter-instrument v0.3.1 (/var/tmp/vibe-kanban/worktrees/vk-a8c3-barter-rs/barter-instrument)
   Compiling reqwest v0.12.23
   Compiling tokio-tungstenite v0.26.2
error[E0658]: `let` expressions in this position are unstable
  --> barter-instrument/src/index/builder.rs:49:12
   |
49 |         if let Some(spec) = instrument.spec.as_ref()
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information

error[E0658]: `let` expressions in this position are unstable
  --> barter-instrument/src/index/builder.rs:50:16
   |
50 |             && let OrderQuantityUnits::Asset(asset) = &spec.quantity.unit
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #53667 <https://github.com/rust-lang/rust/issues/53667> for more information

For more information about this error, try `rustc --explain E0658`.
error: could not compile `barter-instrument` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
